--- a/Script/Plebicito.ipynb
+++ b/Script/Plebicito.ipynb
@@ -736,10 +736,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pdf2image in c:\\users\\lenovo\\anaconda3\\lib\\site-packages (1.13.1)\n",
+      "Requirement already satisfied: pillow in c:\\users\\lenovo\\anaconda3\\lib\\site-packages (from pdf2image) (5.3.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "#! pip install pdf2image\n",
-    "#! conda install -c conda-forge poppler\n",
+    "! pip install pdf2image\n",
+    "! conda install -c conda-forge poppler\n",
     "\n",
     "# importing all the required modules\n",
     "from pdf2image import convert_from_path\n",
